fix overlap at 1024 px

--- a/style.css
+++ b/style.css
@@ -471,9 +471,15 @@ nav a:link{
 	}
 
 	.image-display {
-		width: 170px;
+		/*width: 170px;*/
 	}
 
+}
+
+@media only screen and (max-width: 990px) {
+	.image-display{
+		width:170px;
+	}
 }
 
 
